[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ARPA"
authors = [{ name = "Jie Liu", email = "jieliu2000@live.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/jieliu2000/ARPA"
